hphp/hack/test/sound_dynamic/parsing/interface_implements_dynamic.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

// An interface cannot implement dynamic (the right keyword is extends)

interface I implements dynamic {}
